2001-04-22  Martin Baulig  <baulig@suse.de>

	* libgnome-2.0.pc.in: We don't need libgnomebase anymore.

	* libgnome-init.c (gnome_oaf_pre_args_parse): Call g_thread_init().

2001-04-22  Dietmar Maurer  <dietmar@ximian.com>

	* Makefile.am (INCLUDES): move LIBBONOBO_CFLAGS before
	OAF_CFLAGS, because OAF_CFLAGS include /usr/local/include

2001-04-21  Martin Baulig  <baulig@suse.de>

	* Makefile.am (INCLUDES): Use `LIBGNOME_*DIR' instead of `GNOME*DIR'.

	* gnome-program.[ch]: Put this back.

	* gnome-i18n.h: Put this back.

	* *.[ch]: Don't #include <libgnomebase/gnome-portability.h>.

2001-04-20  Martin Baulig  <baulig@suse.de>

	* libgnome-init.c (gnome_oaf_module_info): Put this back.
	(libbonobo_module_info): Depend of gnome_oaf_module_info; moved
	oaf_popt_options to gnome_oaf_module_info.

2001-04-18  Michael Meeks  <michael@ximian.com>

	* libgnome-init.c (gnome_oaf_module_info): kill,
	(libbonobo_module_info): Update.

2001-04-18  Martin Baulig  <baulig@suse.de>

	* libgnome-init.c (gnome_oaf_module_info): Put this back.
	(libbonobo_module_info): Put this here since Michael doesn't want to
	have it in Bonobo.

2001-04-17  Martin Baulig  <baulig@suse.de>

	* libgnome-init.c (gnome_oaf_module_info): Removed; this is in libbonobo.
	(libgnome_module_requires): Require libbonobo.

	* libgnome-2.0.pc.in: Depend on libbonobo-2.

2001-04-17  Martin Baulig  <baulig@suse.de>

	* gnome-ditem.c (gnome_desktop_item_drop_uri_list): Don't call
	gnome_uri_extract_filename(), just use the URI as-is.

2001-04-15  Martin Baulig  <baulig@suse.de>

	* libgnome-init.c (libgnome_loadinit): Don't initialize threads here;
	this has already been done by libgnomebase.

2001-04-15  Martin Baulig  <baulig@suse.de>

	* libgnome-init.c (gnome_program_get_gconf_client): Moved this function
	here; it was previously in gnome-program.c, but gnome-program.c is now
	in libgnomebase and thus cannot use gconf anymore.

	* libgnome-init.h: New public header file.